--- a/phpmyadmin/Dockerfile
+++ b/phpmyadmin/Dockerfile
@@ -42,7 +42,7 @@ RUN wget https://github.com/FiloSottile/mkcert/releases/download/v1.1.2/mkcert-v
 RUN mv mkcert-v1.1.2-linux-amd64 mkcert
 RUN chmod +x mkcert
 RUN ./mkcert -install
-RUN ./mkcert propell.ml
+RUN ./mkcert DOMAIN_NAME
 
 #CMD bash /home/root/change_ip.sh
 
